add_subdirectory(TestCameraPoseTrajectory)
add_subdirectory(TestDepthCapture)
add_subdirectory(TestFileDialog)
add_subdirectory(TestFileSystem)
add_subdirectory(TestFlann)
add_subdirectory(TestImage)
add_subdirectory(TestLineSet)
add_subdirectory(TestOpenMP)
add_subdirectory(TestPCDFileFormat)
add_subdirectory(TestPointCloud)
add_subdirectory(TestPoseGraph)
add_subdirectory(TestProgramOptions)
add_subdirectory(TestRegistrationRANSAC)
add_subdirectory(TestTriangleMesh)
add_subdirectory(TestVisualizer)
if(Open3D_BUILD_LIBREALSENSE)
	add_subdirectory(TestRealSense)
endif(Open3D_BUILD_LIBREALSENSE)

install(DIRECTORY TestData
	DESTINATION test)
